--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+
   {% include head.html %}
+  {% include ga.html %}
 
   <body>
 
@@ -22,11 +24,23 @@
       <div class="container content">
         {{ content }}
       </div>
+
+      <div class="container footer">
+        <hr>
+        <p>
+          &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+        </p>
+      </div>
+
+
+
     </div>
 
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
+
     <script>
+
       (function(document) {
         var toggle = document.querySelector('.sidebar-toggle');
         var sidebar = document.querySelector('#sidebar');
@@ -43,5 +57,7 @@
         }, false);
       })(document);
     </script>
+
+  <script id="dsq-count-scr" src="//myralabs.disqus.com/count.js" async></script>
   </body>
 </html>
