--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,17 +28,13 @@
       <div class="container footer">
         <hr>
         <p>
-          &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+          &copy; Myra Labs Inc. {{ site.time | date: '%Y' }}. Rights reserved by respective owners.
         </p>
       </div>
 
 
-
     </div>
-
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
-
-
     <script>
 
       (function(document) {
@@ -58,6 +54,6 @@
       })(document);
     </script>
 
-  <script id="dsq-count-scr" src="//myralabs.disqus.com/count.js" async></script>
+  <!--<script id="dsq-count-scr" src="//myralabs.disqus.com/count.js" async></script>-->
   </body>
 </html>
