--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,33 +16,11 @@ layout: default
   k: {{site.version}}<br>
   a: {{site.disqusid}}<br>
   b: {{page.url}}<bR>
+  <div>
 
-  {% if page.comments %}
-     * comment enabled
+  {% include disqus.html %}
 
-    <div id="disqus_thread"></div>
-    <script>
-
-      var disqus_config = function () {
-        this.disqus_shortname = "myralabs";
-        this.page.url = "{{ page.url }}";
-        this.page.identifier = "{{ site.disqusid }}{{ page.url | replace:'index.html','' }}";
-      };
-
-      (function() { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-        s.src = '//myralabs.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-        })();
-    </script>
-
-    <noscript>
-      Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a>
-    </noscript>
-
-{% endif %}
-
+  </div>
 
 </div>
 
